cmake_minimum_required (VERSION 3.0)

project(PromiseLib)

set(PROMISELIB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
file(GLOB PROMISELIB_HEADERS "${PROMISELIB_INCLUDE}/*.h")
file(GLOB PROMISELIB_SRC "*.cpp")

include_directories(${PROMISELIB_INCLUDE})

add_library(PromiseLib ${PROMISELIB_SRC} ${PROMISELIB_HEADERS})

set(PROMISELIB_INCLUDE ${PROMISELIB_INCLUDE} PARENT_SCOPE)
